crates/theoremc-macros/tests/expand/missing_theorem.stderr
error: failed to read theorem file 'tests/expand/this_file_does_not_exist.theorem': io:NotFound
 --> tests/expand/missing_theorem.rs:7:32
  |
7 | theoremc_macros::theorem_file!("tests/expand/this_file_does_not_exist.theorem");
  |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
